# autost

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  archive-cohost-follows.sh  archive-cohost-project.sh  autost.toml.example  build.rs  dist-workspace.toml  flake.nix  how-to-release.md  rust-toolchain.toml  shell.nix
.github/workflows/: nix-build.yml  static.yml
migrations/: 20250815040702_initial.sql  20250818022807_cache.sql
nix/: overlay.nix  package.nix
site/: script.js  style.css
sites/docs/: autost.toml
sites/docs/posts/: directory-structure.md  post-format.md  settings.md
src/: akkoma.rs  attachments.rs  cache.rs  cohost.rs  css.rs  db.rs  dom.rs  http.rs  lib.rs  main.rs  meta.rs  migrations.rs  output.rs  path.rs  rocket_eyre.rs  settings.rs
src/cache/: codec.rs  drv.rs  fs.rs  hash.rs  mem.rs  stats.rs
src/command/: attach.rs  cache.rs  cohost2autost.rs  cohost2json.rs  cohost_archive.rs  db.rs  fedi2autost.rs  import.rs  new.rs  render.rs  server.rs  server2.rs
static/: deploy.sh  script.js  style.css
templates/: akkoma-img.html  ask.html  cohost-audio.html  cohost-img.html  compose.html  feed.xml  home.html  post-meta.html  post.html  posts.html  thread-or-post-author.html  thread-or-post-header.html  thread-or-post-meta.html  threads-content.html  threads.html
wix/: main.wxs
