[package]
name = "autost"
version = "0.1.0"
edition = "2021"
default-run = "autost"

[dependencies]
ammonia = "4.0.0"
askama = "0.12.1"
comrak = "0.28.0"
html5ever = "0.27.0"
jane-eyre = "0.3.0"
markup5ever_rcdom = "0.3.0"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.reqwest]
version = "0.12.7"
default-features = false
# default features, minus default-tls, plus rustls-tls + blocking + json
features = ["rustls-tls", "blocking", "json", "charset", "http2", "macos-system-configuration"]
