[package]
name = "autost"
version = "0.1.0"
edition = "2021"
default-run = "autost"

[dependencies]
ammonia = "4.0.0"
askama = "0.12.1"
chrono = "0.4.38"
comrak = "0.28.0"
html5ever = "0.27.0"
http = "0.2.12"
jane-eyre = "0.3.0"
markup5ever_rcdom = "0.3.0"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
warp = "0.3.7"

[dependencies.reqwest]
version = "0.12.7"
default-features = false
# default features, minus default-tls, plus rustls-tls + blocking + json
features = ["rustls-tls", "blocking", "json", "charset", "http2", "macos-system-configuration"]
