[package]
name = "autost"
version = "1.4.0"
edition = "2021"
default-run = "autost"
repository = "https://github.com/delan/autost"
authors = ["Delan Azabani <delan@azabani.com>"]
description = "cohost-compatible blog engine and feed reader"
homepage = "https://github.com/delan/autost"

[package.metadata.wix]
upgrade-guid = "6653B1BD-7AAD-48A7-AE48-025289EF12F9"
path-guid = "AF2D9F97-09C2-4296-9950-B486F61F39A3"
license = false
eula = false

[build-dependencies]
vergen-gix = "1.0.3"

[dependencies]
ammonia = "4.0.0"
askama = { version = "0.12.1", features = ["with-rocket"] }
askama_rocket = "0.12.0"
base64 = "0.22.1"
bytes = "1.7.1"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
comrak = "0.28.0"
cssparser = "0.34.0"
html5ever = "0.27.0"
http = "0.2.12"
indexmap = { version = "2.7.0", features = ["serde"] }
jane-eyre = "0.3.0"
markup5ever_rcdom = "0.3.0"
rayon = "1.10.0"
renamore = "0.3.2"
rocket = { version = "0.5.1", features = ["json"] }
scraper = "0.22.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["unbounded_depth"] }
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
xml5ever = "0.18.1"

[dependencies.reqwest]
version = "0.12.7"
default-features = false
# default features, minus default-tls, plus rustls-tls + blocking + json
features = ["rustls-tls", "blocking", "json", "charset", "http2", "macos-system-configuration"]

[profile.release]
debug = "line-tables-only"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
# build and upload artifacts for pull requests
pr-run-mode = "upload"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing_errors_doc = "allow"
